2007-08-31   <> 

	* MonoDevelop.Core.Properties/IXmlConvertable.cs,
	  MonoDevelop.Core.Properties/DefaultProperties.cs,
	  MonoDevelop.Core.Properties/PropertyEventArgs.cs,
	  MonoDevelop.Core.Properties/IProperties.cs,
	  MonoDevelop.Core.Properties/CharacterEncodings.cs,
	  MonoDevelop.Core/PropertyChangedEventArgs.cs,
	  MonoDevelop.Core/Runtime.cs, MonoDevelop.Core/AbstractService.cs,
	  MonoDevelop.Core/IStringTagProvider.cs,
	  MonoDevelop.Core/CharacterEncodings.cs,
	  MonoDevelop.Core/ServiceManager.cs, MonoDevelop.Core/XmlReadHelper.cs,
	  MonoDevelop.Core/Properties.cs, MonoDevelop.Core/FileService.cs,
	  MonoDevelop.Core/StringParserService.cs,
	  MonoDevelop.Core/PropertyService.cs, MonoDevelop.Core/IService.cs:
	  Rewrote property infrastructure. Faster (no XmlDom), smaller Xml (No
	  write back of defaultValues), easier to use (only one property class,
	  better to use interface).

2007-08-29   <> 

	* MonoDevelop.Core.Properties/DefaultProperties.cs: Fixed 82621: Crash while
	  building moon.mds.
	* MonoDevelop.Core.Properties/IProperties.cs: Fi

2007-08-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.ProgressMonitoring/ProgressTracker.cs: The Global work
	  may be known even if the last task has an unknown amount of work, so we
	  need to check all tasks.

2007-08-14  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Core.ProgressMonitoring/ConsoleProgressMonitor.cs
	(ReportError): Show exception also in the emitted message.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.AddIns/IconCodon.cs: Moved to MD.Projects.Gui.
	* MonoDevelop.Core.Execution/ProcessService.cs, Makefile.am,
	  MonoDevelop.Core.addin.xml, MonoDevelop.Core.mdp,
	  MonoDevelop.Core/Runtime.cs, MonoDevelop.Core/ServiceManager.cs,
	  MonoDevelop.Core/FileService.cs: Reorganized the extension point
	  hierarchy. Embedded all add-in manifests as resources.

2007-08-07  Ankit Jain  <jankit@novell.com>
